Updating AnnotationDefinition model to be more consistent with caDSR data model.
GForge Tracker #22948
Peer reviewed by Eric